<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>tdt4100-v2021</groupId>
  <artifactId>solitaire</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>Solitaire</name>
  <packaging>jar</packaging>
  
  <dependencies>
  	<!--  JavaFX FXML -->
  	<dependency>
  		<groupId>org.openjfx</groupId>
  		<artifactId>javafx-fxml</artifactId>
  		<version>16-ea+5</version>
  	</dependency>
  	
  	<!--  JUnit 5 -->
  	<dependency>
  		<groupId>org.junit.jupiter</groupId>
  		<artifactId>junit-jupiter-engine</artifactId>
  		<version>5.7.0</version>
  	</dependency>
  </dependencies>
  
  <build>
  	<plugins>
  		<plugin>
  			<artifactId>maven-compiler-plugin</artifactId>
  			<version>3.8.0</version>
  			<configuration>
  				<release>15</release>
  				<compilerArgs>
  					--enable-preview
  				</compilerArgs>
  			</configuration>
  		</plugin>
  		<plugin>
  			<artifactId>maven-surefire-plugin</artifactId>
  			<version>3.0.0-M5</version>
  			<configuration>
  				<argLine>--enable-preview</argLine>
  			</configuration>
  		</plugin>
  		<plugin>
  			<artifactId>maven-failsafe-plugin</artifactId>
  			<version>3.0.0-M5</version>
  			<configuration>
  				<argLine>--enable-preview</argLine>
  			</configuration>
  		</plugin>
  		
		<plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.6</version>
                <configuration>                    
                    <options>
                    <!--
                        <option> dash dash enable-preview</option>
                    -->
                    </options>
                    <mainClass>solitaire.fxui.SolitaireApp</mainClass>
                    <!-- for jlink -->
                    <compress>2</compress>
                    <noHeaderFiles>true</noHeaderFiles>
                    <stripDebug>true</stripDebug>
                    <noManPages>true</noManPages>
                    <launcher>solitaire</launcher>
                    <jlinkImageName>solitaire</jlinkImageName>
                    <jlinkZipName>solitaire</jlinkZipName>
                </configuration>
            </plugin>

  		<!-- Package as jar -->
  		<plugin> 
  			<groupId>org.apache.maven.plugins</groupId> 
  			<artifactId>maven-jar-plugin</artifactId> 
			<version>3.0.0</version>
  			<configuration> 
  				<archive> 
  					<manifest> 
  						<addClasspath>true</addClasspath> 
  						<mainClass>solitaire.fxui.SolitaireApp</mainClass>  
  					</manifest> 
  				</archive> 
  			</configuration> 
  		</plugin> 
		<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>solitaire.fxui.SolitaireApp</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
		<plugin>
                <groupId>org.panteleyev</groupId>
                <artifactId>jpackage-maven-plugin</artifactId>
                <version>1.4.0</version>
                <configuration>
                    <name>Solitaire</name>
                    <appVersion>0.5</appVersion>
                    <vendor>no.ollfkaih</vendor>
                    <destination>target/dist</destination>
                    <module>solitaire.fxui.SolitaireApp</module>
                    <runtimeImage>target/solitaire</runtimeImage>
                    <javaOptions>
                        <option>-Dfile.encoding=UTF-8</option>
                    </javaOptions>
                </configuration>
            </plugin>
		<plugin>
                <groupId>com.gluonhq</groupId>
                <artifactId>client-maven-plugin</artifactId>
                <version>0.1.39</version>
                <configuration>
                    <mainClass>solitaire.fxui.SolitaireApp</mainClass>
                    <reflectionList>
                        <list>solitaire.fxui.SolitaireController</list>
                        <list>java.lang.String</list>
                        <list>javafx.scene.control.Button</list>
                        <list>javafx.scene.control.Label</list>
                        <list>javafx.scene.control.ListView</list>
                        <list>javafx.scene.control.TextField</list>
                        <list>javafx.scene.layout.GridPane</list>
                        <list>javafx.scene.layout.HBox</list>
                        <list>javafx.scene.layout.Pane</list>
                        <list>javafx.scene.text.Text</list>
                    </reflectionList>
                </configuration>
            </plugin>

  	</plugins>
  </build>
</project>